--- a/BaseGradle/Test/build.gradle
+++ b/BaseGradle/Test/build.gradle
@@ -24,5 +24,13 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.0'
+    provided 'com.squareup.okhttp3:okhttp:3.3.0'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+
+
+
+
